--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -34,6 +34,12 @@ steps:
     name: "Build a native executable "
     command: |
       mvn --no-transfer-progress -Pnative -DskipTests package
+  - type: Command
+    name: "Build a container image with Native executable"
+    command: |
+      docker build -f ./Dockerfile \
+                  --build-arg APP_FILE=${APP_FILE} \
+                  -t ${TAG} .
 
 outputArtifacts:
   # - name: app_jar
