--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -38,8 +38,7 @@ steps:
     name: "Build a container image with Native executable"
     command: |
       docker build -f ./Dockerfile \
-                  --build-arg APP_FILE=${APP_FILE} \
-                  -t ${TAG} .
+                  -t hello-java .
 
 outputArtifacts:
   # - name: app_jar
@@ -48,3 +47,9 @@ outputArtifacts:
   - name: app_native_executable
     type: BINARY
     location: target/my-app
+  - name: runtime_image
+    type: DOCKER_IMAGE
+    # this is only the locally exported container image name
+    # this location tag doesn't affect the tag used to deliver the container image
+    # to the Container Registry.
+    location: hello-java:latest
