--- a/build_spec.yaml
+++ b/build_spec.yaml
@@ -53,3 +53,8 @@ outputArtifacts:
     # this location tag doesn't affect the tag used to deliver the container image
     # to the Container Registry.
     location: hello-java:latest
+  - name: oke_deploy_manifest
+    type: BINARY
+    # this location tag doesn't effect the tag used to deliver the container image
+    # to the Container Registry
+    location: ${OCI_PRIMARY_SOURCE_DIR}/oci-oke-deployment.yaml
