--- a/oci-oke-deployment.yaml
+++ b/oci-oke-deployment.yaml
@@ -20,6 +20,13 @@ spec:
           ports:
             - containerPort: 8080
               protocol: TCP
+          resources:
+            requests:
+              cpu: 100m
+              memory: 256Mi
+            limits:
+              cpu: 200m
+              memory: 512Mi
 ---
 apiVersion: v1
 kind: Service
