--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,10 @@
       <scope>test</scope>
     </dependency>
 
-    <dependency>
+<!--     <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
-    </dependency>
+    </dependency> -->
   </dependencies>
 
   <build>
